# ai-agent-journey

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  result.json  urls.txt
.github/workflows/: ci.yml
notes/: 01_uv.md  02 typing.md  02_typing.md  03_pydantic.md  04_context.md  04_contextmanager.md  04_files.md  04_iterator_generator.md  04_wrapper.md  05_asyncio.md  06_project.md  07_crawler.md  07_crawler_parser.md  08_crawler_fetcher.md  09._pytest.md  10_format.md  11_robots.md
src/: 02 typing.py  02_typing.py  03_pydantic.py  04_context.py  04_files.py  04_iterator_generator.py  04_wrapper.py  05_asyncio.py
src/async_crawler/: _try.py  _try_fetcher.py  cli.py  fetcher.py  models.py  parser.py  robots.py
tests/: conftest.py  test_cli.py  test_fetcher.py  test_parser.py
