[project]
name = "ai-agent-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic[email]>=2.13.4",
    "requests>=2.34.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
