[project]
name = "ai-agent-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic[email]>=2.13.4",
    "requests>=2.34.0",
    "rich>=15.0.0",
    "ruff>=0.15.13",
    "selectolax>=0.4.9",
    "typer>=0.25.1",
]

# dev 依赖
[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
]

# cli
[project.scripts]
mycrawler = "async_crawler.cli:app"

# 把项目升级为 Package
[tool.uv]
package = true

# 打包方式
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatchling包路径
[tool.hatch.build]
packages = ["src/async_crawler"]

# ruff
[tool.ruff]
line-length = 100              # 每行最长 100 字符
target-version = "py313"

# ruff lint
[tool.ruff.lint]
# 启用哪些规则集
select = [
    "E",    # pycodestyle 错误
    "W",    # pycodestyle 警告
    "F",    # pyflakes 错误（如未使用变量）
    "I",    # isort（import 排序）
    "N",    # pep8-naming（命名规范）
    "UP",   # pyupgrade（升级老语法）
    "B",    # flake8-bugbear（常见 bug 检测）
    "PLE",  # class 内方法缺 self
]
ignore = []

# mypy
[tool.mypy]
python_version = "3.13"
strict = true

# pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"           # 所有 async def 测试自动用 asyncio 跑

# 测试覆盖率指定
[tool.coverage.run]
source = ["src/async_crawler"]         # 指定覆盖目录
omit = ["*/tests/*", "*/_try*.py"]    # 排除测试文件本身和临时调试脚本

# 测试覆盖率报告
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true                      # 默认显示 missing
fail_under = 70                          # 覆盖率低于 80% 时 pytest 失败
